Add ConsultRepository, ConsultService e ConsultController, VetService e VetController ItemM, Prescri, VetRepo, erro ao executar "upon circular references" - dia 05/04

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=postgres
 spring.datasource.password=123kauan
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+value.consult=200.0
